<resources>
    <string name="app_name">Get Text 3</string>
    <string name="text_title">Welcome</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">Register</string>
    <string name="text_already_member">Back to Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="rememberCheckBox">Remember Email and Password</string>



    <!-- String array - LOOK FOR A FILE CONTAINS ALL DOUGLAS COURSES -->
    <string-array name="courseList">
        <item>CSIS1175</item>
        <item>CSIS1275</item>
        <item>CSIS2175</item>
        <item>CSIS3175</item>
        <item>CSIS4175</item>
    </string-array>
    <string-array name="conditionList">
        <item>Select a condition</item>
        <item>Like New</item>
        <item>Good</item>
        <item>OK</item>
        <item>Acceptable</item>
    </string-array>

</resources>
